# Python-Piscine

./: README.md
P00/ex1/: ft_plot_area.py
P00/ex2/: ft_harvest_total.py
P00/ex4/: ft_water_reminder.py
P00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
P01/ex0/: ft_garden_intro.py
P01/ex1/: ft_garden_data.py
P01/ex2/: ft_plant_growth.py
P01/ex3/: ft_plant_factory.py
P01/ex4/: ft_garden_security.py
P01/ex5/: ft_plant_types.py
P01/ex6/: ft_garden_analytics.py
P02/ex0/: ft_first_exception.py
P02/ex1/: ft_different_errors.py
P02/ex2/: ft_custom_errors.py
P02/ex3/: ft_finally_block.py
P02/ex4/: ft_raise_errors.py
P02/ex5/: ft_garden_management.py
P03/ex0/: ft_command_quest.py
P03/ex1/: ft_score_analytics.py
P03/ex2/: ft_coordinate_system.py
P03/ex3/: ft_achievement_tracker.py
P03/ex4/: ft_inventory_system.py
P03/ex5/: ft_data_stream.py
P03/ex6/: ft_analytics_dashboard.py
P04/ex0/: ft_ancient_text.py
P04/ex1/: ft_archive_creation.py
P04/ex2/: ft_stream_management.py
P04/ex3/: ft_vault_security.py
P04/ex4/: ft_crisis_response.py
P05/ex0/: stream_processor.py
P05/ex1/: data_stream.py
P05/ex2/: nexus_pipeline.py
P06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
P06/alchemy/: __init__.py  potions.py
P07/ex0/: Card.py  CreatureCard.py  __init__.py  main.py
P07/ex1/: ArtifactCard.py  Deck.py  SpellCard.py  main.py
P07/ex2/: Combatable.py  EliteCard.py  Magical.py  main.py
P08/ex1/: loading.py  pyproject.toml
test/: pyvenv.cfg
(+20 files in other folders)
