[tool.poetry]
name = "matrix-loader"
version = "0.1.0"
description = "Matrix data analysis program"
authors = ["dansimoe"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0"
numpy = "^2.0"
matplotlib = "^3.7"
requests = "^2.31"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"